...
            Box(
                modifier = Modifier.windowInsetsPadding(WindowInsets.navigationBars).padding(AppTheme.spacing.medium)
            ){
                AppButton(
                    isLoading = isButtonLoading,
                    modifier = Modifier.fillMaxWidth(),
                    text = "Next",
                    onClick = bottomAction,
                    disabled = !canProceed
                )
            }

        }
...
